test/extern/diten/externVoidFnNoArray.good
externVoidFnNoArray.chpl:5: error: illegal use of function that does not return a value: 'voidNoArray'
